[gd_scene load_steps=4 format=3 uid="uid://dg6iach1bgv3r"]

[ext_resource type="Script" path="res://LydspillerSettings.gd" id="1_a3lb4"]
[ext_resource type="PackedScene" uid="uid://dsf7tou3a10bh" path="res://playlistentryedit.tscn" id="2_lqo5b"]
[ext_resource type="PackedScene" uid="uid://bdbf6ikhsdyps" path="res://editGroups_dialog.tscn" id="3_2xmoc"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a3lb4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Control" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="btnHelp" type="Button" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "HJELP"

[node name="btnToPlay" type="Button" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Til Avspilling"

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="boxEditor" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="boxContent" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.28

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent"]
layout_mode = 2
text = "NY ELLER REDIGER -  LYD-KNAPP / SPILLELISTE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent/HBoxContainer"]
layout_mode = 2
text = "Nytt navn:"

[node name="txtListName" type="LineEdit" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Navn til lydknapp eller spilleliste"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent/HBoxContainer"]
layout_mode = 2

[node name="btnGroups" type="Button" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Trykk her for å sette hvilke grupper denne listen skal vises i"
text = "Vises i 123 grupper"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="boxListContent" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="playlistentryedit" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent/ScrollContainer/boxListContent" instance=ExtResource("2_lqo5b")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer"]
layout_mode = 2

[node name="btnSaveEdit" type="Button" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Hvis et annet element deler samme navn, så vil dette overskrive the gamle elementet."
text = "Lagre og lukk"

[node name="btnCancelEdit" type="Button" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Avbryt og lukk"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="boxListElements" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="playlistentryedit" parent="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/VBoxContainer/ScrollContainer/boxListElements" instance=ExtResource("2_lqo5b")]
layout_mode = 2

[node name="Panel2" type="Panel" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer"]
layout_mode = 2
text = "Lydfiler"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer"]
layout_mode = 2

[node name="btnLoadDir" type="Button" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Åpne mappe"

[node name="txtRootName" type="Label" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "~/path/to/music/directory/"

[node name="btnUpOneDir" type="Button" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "<-"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer"]
layout_mode = 2

[node name="Tree" type="Tree" parent="VBoxContainer/HSplitContainer/Panel2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
column_titles_visible = true
hide_root = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(591, 162)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="Help" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "hjelp"
size = Vector2i(700, 500)
dialog_text = "Velkommen til lydspiller redigering. Dette vinduet er delt i to. På venstre side styrer du hvilke lyd-knapper og spillelister som skal vises på spillemenyen, og på høyre side navigerer du frem til filer du ønsker å bruke.

For å lage en lyd-knapp, lagre en liste med kun en lyd. Da vil den vises som en knapp på spillemenyen.

For å lage en spilleliste, lagre en liste med to eller flere lyder. Da vil den vises som en liste på spillemenyen.

(PLANLAGT MEN IKKE IMPLEMENTERT)
Du kan også bruke en stream-deck eller annen extern ting eller app til å spille av lyder og spillelister. Dette gjøres med websocket protokoll med portnummer (UBESTEMT)
"
dialog_autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="ErrorDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Oops..."
position = Vector2i(300, 300)
size = Vector2i(103, 100)
dialog_text = "Oi da. Noe gikk galt med denne feilmeldingen."

[node name="groupsDialog" parent="." instance=ExtResource("3_2xmoc")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="VBoxContainer/HSplitContainer/Panel/VBoxContainer/HBoxContainer/btnHelp" to="." method="_openHelp"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Panel/VBoxContainer/HBoxContainer/btnToPlay" to="." method="switchToPlayScene"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/boxContent/HBoxContainer/btnGroups" to="." method="open_group_dialog"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/HBoxContainer/btnSaveEdit" to="." method="saveEditor"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Panel/VBoxContainer/VSplitContainer/boxEditor/VBoxContainer/HBoxContainer/btnCancelEdit" to="." method="clearEditor"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer/btnLoadDir" to="." method="_on_btn_load_dir_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/HBoxContainer/btnUpOneDir" to="." method="_on_btn_up_one_dir_pressed"]
[connection signal="item_activated" from="VBoxContainer/HSplitContainer/Panel2/VBoxContainer/Tree" to="." method="_on_tree_item_activated"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="bad_group_name" from="groupsDialog" to="." method="_on_groups_dialog_bad_group_name"]
